# cpu-embedding-service

./: .gitignore  Dockerfile  README.md  config.json.template  pyproject.toml  requirements.txt
cpu_embedding_service/: __init__.py  app.py
cpu_embedding_service/api/: __init__.py  routes.py  schemas.py
cpu_embedding_service/core/: __init__.py  observability.py  security.py
cpu_embedding_service/engine/: __init__.py  sentence_transformers.py
helm/embedding-service/: Chart.yaml  values.yaml
helm/embedding-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  istio-gateway.yaml  istio-virtualservice.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
src/embedding_service/: __init__.py  app.py  config.py
src/embedding_service/api/: __init__.py  routes.py
src/embedding_service/core/: __init__.py  logging.py  observability.py  security.py
src/embedding_service/engine/: __init__.py  base.py  sentence_transformers.py
tests/: conftest.py  test_config_validation.py  test_embeddings_endpoint.py  test_limits.py  test_ready.py
