[tool.poetry]
name = "embedding-service"
version = "1.0.0"
description = "Production-ready CPU-only embedding microservice using SentenceTransformers and FastAPI"
authors = ["Platform Team"]
readme = "README.md"
packages = [{include = "embedding_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sentence-transformers = "^3.3.0"
numpy = "^2.0.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
pilot-common = {path = "../pilot-common", develop = true}
opentelemetry-api = {version = "^1.28.0", optional = true}
opentelemetry-sdk = {version = "^1.28.0", optional = true}
opentelemetry-instrumentation-fastapi = {version = "^0.49b0", optional = true}
opentelemetry-exporter-otlp = {version = "^1.28.0", optional = true}

[tool.poetry.extras]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
