[tool.poetry]
name = "cpu-embedding-service"
version = "1.0.0"
description = "Production-ready CPU-only embedding microservice using SentenceTransformers and FastAPI"
authors = ["Platform Team"]
readme = "README.md"
packages = [{include = "cpu_embedding_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sentence-transformers = "^5.2.0"
numpy = "^2.4.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
pilot-common = {path = "../pilot-common", develop = true, extras = ["http", "security"]}
opentelemetry-api = {version = "^1.39.1", optional = true}
opentelemetry-sdk = {version = "^1.39.1", optional = true}
opentelemetry-instrumentation-fastapi = {version = "^0.60b1", optional = true}
opentelemetry-exporter-otlp = {version = "^1.39.1", optional = true}

[tool.poetry.extras]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp"
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.14.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["." ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
